--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,216 @@
-requests==2.26.0
-json==2.0.9
-pandas==1.3.3
-streamlit==1.16.0
-
-
+altair==4.2.0
+antiorm==1.2.1
+arrow==1.2.3
+asgiref==3.5.2
+asttokens==2.0.5
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+binaryornot==0.4.4
+bleach==6.1.0
+blinker==1.6.2
+bokeh==3.0.3
+briefcase==0.3.11
+Brotli==1.1.0
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+commonmark==0.9.1
+contourpy==1.0.7
+cookiecutter==2.1.1
+cycler==0.11.0
+dash==2.9.3
+dash-bootstrap-components==1.3.1
+dash-colorscales==0.0.4
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+db==0.1.1
+db-sqlite3==0.0.1
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+Django==4.1.3
+docopt==0.6.2
+dtale==3.7.0
+EasyProcess==1.1
+entrypoint2==1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+executing==0.8.3
+Faker==19.6.1
+fastjsonschema==2.19.0
+favicon==0.7.0
+filelock==3.9.0
+Flask==2.2.5
+Flask-Compress==1.14
+flask-ngrok==0.0.25
+fonttools==4.34.4
+future==0.18.3
+gitdb==4.0.9
+GitPython==3.1.29
+greenlet==1.1.2
+h11==0.14.0
+htbuilder==0.6.2
+idna==3.3
+importlib-metadata==5.1.0
+install==1.3.5
+investpy==1.0.8
+ipykernel==6.15.0
+ipython==8.4.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+jinja2-time==0.2.0
+joblib==1.3.2
+jsonschema==4.17.3
+jupyter-client==7.3.4
+jupyter_core==5.5.0
+jupyterlab_pygments==0.3.0
+kaleido==0.2.1
+kiwisolver==1.4.4
+lxml==4.9.1
+lz4==4.3.2
+Markdown==3.4.4
+markdownlit==0.0.7
+MarkupSafe==2.1.1
+matplotlib==3.5.3
+matplotlib-inline==0.1.3
+missingno==0.5.2
+mistune==3.0.2
+more-itertools==10.1.0
+MouseInfo==0.1.3
+mss==9.0.1
+multitasking==0.0.11
+mysql-connector-python==8.0.13
+nbclient==0.9.0
+nbconvert==7.12.0
+nbformat==5.9.2
+nest-asyncio==1.5.5
+networkx==3.2.1
+numpy==1.23.1
+openpyxl==3.0.10
+outcome==1.3.0.post0
+packaging==21.3
+pandas==2.1.3
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.2.0
+pipreqs==0.4.13
+pivottablejs==0.9.0
+platformdirs==2.5.2
+playwright==1.25.2
+Plost==0.2.5
+plotly==5.11.0
+plotly-express==0.4.1
+plyer==2.1.0
+polars==0.17.2
+prompt-toolkit==3.0.29
+protobuf==3.20.3
+psutil==5.9.1
+pure-eval==0.2.2
+pyarrow==10.0.1
+PyAutoGUI==0.9.54
+pycparser==2.21
+pydeck==0.8.0
+pyee==8.1.0
+PyGetWindow==0.0.9
+Pygments==2.12.0
+pymdown-extensions==10.3
+Pympler==1.0.1
+PyMsgBox==1.0.9
+pyodbc==4.0.35
+pyodc==1.3.0
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyrsistent==0.19.2
+pyscreenshot==3.1
+PyScreeze==0.1.29
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-decouple==3.7
+python-slugify==6.1.2
+pytweening==1.0.7
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==304
+pyxlsb==1.0.10
+PyYAML==6.0
+pyzmq==23.2.0
+QuantStats==0.0.59
+requests==2.28.1
+rich==12.6.0
+scikit-learn==1.3.2
+scipy==1.9.0
+seaborn==0.11.2
+secure-smtplib==0.1.1
+selenium==4.15.2
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+SQLAlchemy==2.0.19
+sqlparse==0.4.3
+squarify==0.4.3
+st-annotated-text==4.0.1
+stack-data==0.3.0
+statsmodels==0.13.5
+streamlit==1.28.2
+streamlit-aggrid==0.3.3
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.61
+streamlit-embedcode==0.1.2
+streamlit-extras==0.3.2
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.0
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
+strsimpy==0.2.1
+tabulate==0.8.10
+tenacity==8.1.0
+text-unidecode==1.3
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tomli_w==1.0.0
+toolz==0.12.0
+tornado==6.1
+traitlets==5.14.0
+trio==0.23.1
+trio-websocket==0.11.1
+typing_extensions==4.4.0
+tzdata==2022.6
+tzlocal==4.2
+Unidecode==1.3.6
+urllib3==1.26.11
+urlopen==1.0.0
+validators==0.20.0
+virtualenv==20.17.1
+watchdog==2.1.9
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==10.1
+Werkzeug==2.2.3
+wsproto==1.2.0
+xarray==2023.11.0
+xlrd==2.0.1
+xlsx2csv==0.8.1
+xlwt==1.3.0
+xyzservices==2022.9.0
+yarg==0.1.9
+yfinance==0.1.74
+zipp==3.11.0
